--- a/Dockerfile_condaEnv
+++ b/Dockerfile_condaEnv
@@ -27,6 +27,7 @@ RUN mkdir /root/.conda && bash Miniconda3-latest-Linux-x86_64.sh -b
 RUN conda init bash
 ADD conda_environment.yml /tmp/
 RUN conda env create -f /tmp/conda_environment.yml; exit 0
+RUN conda init bash
 RUN conda activate CDS_Lab
 RUN conda install -c conda-forge mpi4py
 
