--- a/requirements.txt
+++ b/requirements.txt
@@ -142,8 +142,8 @@ termcolor==1.1.0
 terminado==0.8.2
 testpath==0.4.2
 testresources==2.0.1
-torch==1.5.1+cu101
-torchvision==0.6.1+cu101
+torch==1.6.0
+torchvision==0.6.1
 tornado==6.0.3
 tqdm==4.36.1
 traitlets==4.3.3
