--- a/Dockerfile_tf1X
+++ b/Dockerfile_tf1X
@@ -36,7 +36,17 @@ ENV MKL_NUM_THREADS=1
 
 COPY asound.conf /etc/asound.conf
 
-RUN pip install pip install tensorflow-gpu==1.15
+RUN pip install pip install tensorflow-gpu==1.14
+
+# install OpenAI req
+RUN apt-get install -y cmake libopenmpi-dev python3-dev zlib1g-dev
+
+# install baseines - some strange lib
+RUN git clone https://github.com/openai/baselines.git
+RUN pip install -e baselines/.
+
+RUN pip install mpi4py
+
 
 RUN mkdir /src
 WORKDIR /src
